# SmartCar_proj

./: README.md
HOGUI/: CMakeLists.txt  hogUI.cpp  readme.md
cardetection/: DataSetManager.cpp  DataSetManager.h  detectcar.cpp  detectcar_workingon.cpp  main.cpp  march30_solidWhiteRight.avi  readme.md  train.cpp
p1/: CMakeLists.txt  README.md  VideoController.cpp  VideoController.h  main.cpp  main_simple.cpp  myOutputCarLanesVideo.avi
